[package]
name = "sinatra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "http2"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
futures = "0.3.30"
tokio-util = "0.7.10"
serde_json = "1.0.116"
regex = "1.10.4"
ffmpeg-next = "7.0.0"
dotenv = "0.15.0"
