[package]
name = "sinatra"
version = "2024.1.0"
edition = "2021"

[features]
default = []

# Local/monolith deployment: Redis, HTTP/S3-compatible API, events + video processing
local = [
    "dep:axum",
    "dep:deadpool-redis",
    "dep:s3s",
    "dep:tower",
    "dep:tower-http",
    "dep:mime_guess",
    "dep:ffmpeg-next",
    "dep:image"
]

# AWS Orchestrator: S3 + SQS + DynamoDB + video analysis (segment detection)
aws_orchestrator = [
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
    "dep:aws-sdk-dynamodb",
    "dep:aws-config",
    "dep:ffmpeg-next"
]

# AWS Worker: S3 + SQS + DynamoDB + video processing (processes jobs from queue)
aws_worker = [
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
    "dep:aws-sdk-dynamodb",
    "dep:aws-config",
    "dep:ffmpeg-next",
    "dep:image"
]

# Full AWS (both orchestrator and worker)
aws = ["aws_orchestrator", "aws_worker"]

# Full: everything (for development)
full = ["local", "aws"]

[dependencies]
# Core dependencies (always included)
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
futures = "0.3.30"
tokio-util = "0.7.10"
serde_json = "1.0.116"
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1.89"
bytes = "1.7.2"
tempfile = "3.13.0"

# Video processing (only local + aws_worker)
ffmpeg-next = { version = "8.0.0", optional = true }
image = { version = "0.25.9", optional = true }

# Local-only dependencies
axum = { version = "0.7.5", features = ["multipart", "http2"], optional = true }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"], optional = true }
s3s = { version = "0.12.0", optional = true }
tower = { version = "0.5.2", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
mime_guess = { version = "2.0.4", optional = true }

# AWS-only dependencies
aws-sdk-s3 = { version = "1.119.0", optional = true }
aws-sdk-sqs = { version = "1.91.0", optional = true }
aws-sdk-dynamodb = { version = "1.101.0", optional = true }
aws-config = { version = "1.8.12", optional = true }

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.13.0"

[lib]
name = "sinatra"
path = "src/lib.rs"

[[bin]]
name = "monolith"
path = "src/bin/monolith.rs"
required-features = ["local"]

[[bin]]
name = "aws_worker"
path = "src/bin/aws_worker.rs"
required-features = ["aws_worker"]

[[bin]]
name = "aws_orchestrator"
path = "src/bin/aws_orchestrator.rs"
required-features = ["aws_orchestrator"]
